# mehta

./: README.md  pyproject.toml  setup.cfg
src/mehta/: __init__.py  __main__.py  client.py  helpers.py  plugins.py
tests/: confest.py  run_tests.py  test_basic.py  test_commands.py  test_errors.py  test_integration.py  test_mocks.py
