[metadata]
name = mehta
version = 1.1.6
author = Ankit Mehta
author_email = starexx.m@gmail.com
maintainer = Ankit Mehta
maintainer_email = starexx.m@gmail.com
description = A beginner-friendly telegram sdk providing intuitive command decorators.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/realstarexx/mehta
keywords = telegram, bot, sdk, telethon, decorator, framework
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Information Technology
    Topic :: Communications :: Chat
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = true
zip_safe = false
python_requires = >=3.7
install_requires =
    pyTeleBot>=0.1.0
    telethon>=1.30.0
    requests>=2.25.0
platforms = any

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    black
    flake8
docs =
    sphinx
    sphinx-rtd-theme

[options.entry_points]
console_scripts =
    mehta = mehta:main

[project]
name = Mehta
description = A decorator-based SDK for building Telegram bots with clean syntax, modular structure, and powerful features.
keywords =
    telegram
    bot
    sdk
    telethon
    decorator
    framework
